fixed text spacing

--- a/docs/babies.css
+++ b/docs/babies.css
@@ -155,3 +155,7 @@ datalist{
   text-align: right;
   width: 98%;
 }
+
+text.shadow {
+  background-color:white;
+}
